--- a/package.json
+++ b/package.json
@@ -9,14 +9,25 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.4.0",
+    "flowbite": "^1.6.5",
+    "flowbite-react": "^0.4.4",
+    "lodash": "^4.17.21",
     "next": "13.4.3",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-date-picker": "^10.2.0",
+    "react-dom": "18.2.0",
+    "react-outside-click-handler": "^1.3.0"
   },
   "devDependencies": {
+    "@types/node": "20.2.3",
     "@types/react": "18.2.7",
+    "@types/react-outside-click-handler": "^1.3.1",
+    "autoprefixer": "^10.4.14",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.3",
+    "postcss": "^8.4.23",
+    "tailwindcss": "^3.3.2",
     "typescript": "5.0.4"
   }
 }
